update auth feature
