# internal/models/login.go
@@ -5,3 +5,28 @@ type RegisterInput struct {
 	VerifyType    int    `json:"verify_type"`
 	VerifyPurpose string `json:"verify_purpose"`
 }
+
+type VerifyInput struct {
+	VerifyKey  string `json:"verify_key"`
+	VerifyCode string `json:"verify_code"`
+}
+
+type VerifyOtpOutput struct {
+	Token   string `json:"token"`
+	UserId  string `json:"user_id"`
+	Message string `json:"message"`
+}
+
+type UpdatePasswordRegisterInput struct {
+	UserToken    string `json:"user_token"`
+	UserPassword string `json:"user_password"`
+}
+
+type LoginInput struct {
+	UserAccount  string `json:"user_account"`
+	UserPassword string `json:"user_password"`
+}
+
+type LoginOutput struct {
+	Token string `json:"token"`
+}
